# chess-engine

./: .gitignore  CMakeLists.txt  ChessBot.cpp  ChessBot.h  MoveSimulation.cpp  MoveSimulation.h  README.md  SchaakStuk.cpp  SchaakStuk.h  Tile.cpp  Tile.h  chessboard.cpp  config.h  game.cpp  game.h  main.cpp  mainwindow.cpp  mainwindow.h  promotepawn.cpp  promotepawn.h  promotepawn.ui  schaakstuk.cpp  schaakstuk.h  sharedtypes.h  ui_promotepawn.h
exceptions/: BotCantResolveCheck.h  KingNotFoundException.h  NullPointerException.h
games/: game2.chs  game3.chs  game4.chs  queen_takes_bishop.chs
